--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "bin/index.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/djsrv/ProjectorRays.git"
+    "url": "git+https://github.com/Earthquake-Project/ProjectorRays.git"
   },
   "author": "djsrv",
   "license": "Apache-2.0",
