--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "projectorrays",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "Shockwave decompiler",
   "main": "bin/index.js",
   "scripts": {
-    "start": "node bin/index.js"
+    "start": "ts-node src/index.ts"
   },
   "repository": {
     "type": "git",
@@ -14,16 +14,16 @@
   "license": "Apache-2.0",
   "dependencies": {
     "format-json": "^1.0.3",
-    "fs-extra": "^4.0.1",
-    "make-error": "^1.3.0",
-    "minimist": "^1.2.0"
+    "fs-extra": "^4.0.3",
+    "make-error": "^1.3.6",
+    "minimist": "^1.2.5",
+    "natives": "^1.1.6"
   },
   "devDependencies": {
-    "@types/fs-extra": "^4.0.0",
+    "@types/fs-extra": "^4.0.11",
     "@types/minimist": "^1.2.0",
-    "@types/node": "^8.0.19",
-    "gulp": "^3.9.1",
-    "gulp-typescript": "^3.2.1",
-    "typescript": "^2.4.2"
+    "@types/node": "^8.10.61",
+    "ts-node": "^8.10.2",
+    "typescript": "^2.9.2"
   }
 }
