--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -19,8 +19,8 @@ jobs:
           install: >-
             git
             base-devel
-            mingw-w64-zlib
-            mingw-w64-boost
+            mingw-w64-x86_64-zlib
+            mingw-w64-x86_64-boost
       - uses: actions/checkout@v2
       - run: mingw32-make
       - uses: marvinpinto/action-automatic-releases@latest
