--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -37,5 +37,5 @@ jobs:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           automatic_release_tag: latest
           prerelease: true
-          title: Development Build
+          title: Development Build ${{ steps.sha-short.outputs.sha-short }}
           files: projectorrays-${{ steps.sha-short.outputs.sha-short }}.exe
