--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -23,6 +23,8 @@ jobs:
             mingw-w64-x86_64-zlib
             mingw-w64-x86_64-boost
             mingw-w64-x86_64-nlohmann-json
+            mingw-w64-x86_64-mpg123
+            vim
       - name: Checkout ProjectorRays
         uses: actions/checkout@v2
       - id: sha-short
